objects/VisitOps__Topic_Category__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Category_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Show_on_Customer_Agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the value is checked, all associated topics will automatically default Show on Customer Agenda to true on an Agenda session.</inlineHelpText>
        <label>Show on Customer Agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Show_on_Customer_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the value is checked, all associated topics will automatically default Show on Customer Survey to true on an Agenda session.</inlineHelpText>
        <label>Show on Customer Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Show_on_Presenter_Agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the value is checked, all associated topics will automatically default Show on Presenter Agenda to true on an Agenda session.</inlineHelpText>
        <label>Show on Presenter Agenda</label>
        <type>Checkbox</type>
    </fields>
    <label>Topic Category</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Show_on_Customer_Agenda__c</columns>
        <columns>VisitOps__Show_on_Customer_Survey__c</columns>
        <columns>VisitOps__Show_on_Presenter_Agenda__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topic Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>